- Calendar: Added direct_url property for calendar views
- Core: Distinction between holidays that are free days and holidays that are not.
- E-mail: link to easily move emails to and from spam folder.

6.0.0
- Paste images in chrome
- Support for pasting images and drag and drop nodes in site module
- Use XCache for caching values
- Workflow: email and reminder for file uploader when file is disapproved.
- Using namespaces in PHP code


17-06-2014 5.1.8
- ActivityLog to file function
- 5.0 fixes

16-05-2014 5.1.7
- PHP custom field
- 5.0.57 fixes

13-05-2014 5.1.6
- Billing: PDF Templates can have stationery paper
- Ticket messages styled like conversation and notes display yellow.
- Files: Users without disk quota can still upload files.
- Calendar: Able to import very large ICalendar objects.
- Calendar: Notification to user when attempting to import an ICalendar with a recurrence containing 'Last X of month' pattern.

11-02-2014 5.1.2
- Included LDAP setting saving feature

29-01-2014 5.1.1
- Merged fixes of 5.0.34-39

22-01-2014 5.1.0
- Calendar: Overview of participant and resource availability per day.
- Tasks & Reminders: get reminder when another user puts a task in your task list
- Added user quota support
- Show ticket template per message
- Custom IMAP flag support (Message labels)



10-07-2014 5.0.69
- Updated Portugese-Brazil translation
- Fixed not working if conditions in e-mail templates
- Invalid calendar state that did not select own calendar on load
- Urlencode phone numbers in callto links

03-07-2014 5.0.68
- Size mismatch on debian repos

03-07-2014 5.0.67
- Broken message dialog in ticket system

02-07-2014 5.0.66
- Private events where shown in new calendar prints
- Moved file search index to separate cron job
- Ticket types will always sort by group name so groups wont show up double

12-06-2014 5.0.65
- Bug in checking user permission when sending mail

12-06-2014 5.0.64
- Forward messages that were attached fixed